//client streaming
syntax = "proto3";

package smarttraffic;

service TrafficMonitor {
  // Client streaming RPC
  rpc StreamTraffic (stream TrafficUpdate) returns (TrafficSummary);

  }

// Message sent by each user
message TrafficUpdate {
  string location = 1;
  int32 congestionLevel = 2; // 1 = heavy, 5 = very light
}

// Response from the server after stream ends
message TrafficSummary {
  float averageCongestion = 1;
  int32 totalReports = 2;
  string mostReportedLocation = 3;
}

